deploy/server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbit
  labels:
    name: rabbit
    app: rabbit
