deploy/server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-service
  namespace: rabbit
  labels:
    app: rabbit
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: grpc
    port: 9090
    targetPort: 9090
    protocol: TCP
  selector:
    app: rabbit
